--- a/css website/wii.css
+++ b/css website/wii.css
@@ -11,7 +11,7 @@ header {
   padding: 3em 1em 2em 1em;
   text-align: center;
   background: 
-    url(mb\ clear.png) 50% center no-repeat;
+    url(test.png) 50% center no-repeat;
   background-color: rgba(175, 175, 175, 0.781);
 }
 footer {
